# pointguard

./: .gitignore  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  README.md  setup-tests.sh
.github/workflows/: rust.yml
src/: clip.rs  error.rs  files.rs  gpg.rs  lib.rs  main.rs  opts.rs  search.rs  settings.rs  show.rs
src/show/: pgtree.rs
test-store/: pointguard.dev.gpg
test-store/dir/: test.gpg
test-store/same/: test.gpg
