[package]
name = "pg"
version = "0.1.0"
authors = ["Andrew Stephan <andrew@pointguard.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
config = "0.10.1"
directories = "3.0"
ptree = "0.2.1"
walkdir = "2.3.1"
anyhow = "1.0"
thiserror = "1.0"
