[package]
name = "pointguard"
version = "0.1.0"
authors = ["Andrew Stephan <andrew@pointguard.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "pg"
path = "src/main.rs"


[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.1"
cli-clipboard = "0.2.0"
config = "0.11.0"
directories = "3.0"
ptree = "0.2.1"
thiserror = "1.0"
walkdir = "2.3.1"
