[package]
name = "pointguard"
version = "0.1.0"
authors = ["Allie Stephan <allie@pointguard.dev>"]
description = "pointguard is a cli password manager that is compatible with password-store"
repository = "https://github.com/thekiteeatingtree/pointguard"
license = "MIT / Apache-2.0"
keywords = ["password", "pass", "password-store"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "pg"
path = "src/main.rs"


[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.1"
cli-clipboard = "0.2.0"
config = "0.11.0"
directories = "3.0"
ptree = "0.2.1"
thiserror = "1.0"
walkdir = "2.3.1"
